[project]
name = "unitconverter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DoniaBatool", email = "donia1510aptech@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
   
    "streamlit>=1.42.2",
]

[project.scripts]
unitconverter = "unitconverter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
